--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,12 @@ layout: default
   <div class="col-md-12">
     CENTRO é um registro da ocupação criativa do centro de São Paulo. <a href="" class="read-more">leia mais</a>
 
-    {% for post in site.posts %}
+    {% sorted_for post in site.posts sort_by:title %}
       <span class="{{ post.enabled }}">
         {% if post.enabled == "enabled" %}
-          <a href="{{ post.url | prepend: site.baseurl }}" class="company">{{ post.title }}</a>
+          <a href="{{ post.url | prepend: site.baseurl }}" class="company"
+          {% if post.photo != "" %} data-photo="{{post.photo}}" {% endif%}
+          >{{ post.title }}</a>
         {% else %}
           <span class="company">{{ post.title }}</span>
         {% endif %}
@@ -17,25 +19,7 @@ layout: default
         <span class="description">{{ post.description }}</span>
         <span class="address">{{ post.address }}</span>
       </span>
-    {% endfor %}
+    {% endsorted_for %}
 
-    <!-- <span class="disabled"><a href="" class="company">Amarello</a> <span class="coordinates">-23º 32’ 47.84” -46º 38’ 10.87”</span> <span class="description">é uma editora.</span> <span class="address">Rua Libero Badaró, 336, Sé.</span></span>
-    <span class="disabled"><a href="#Arnold" class="company">Arnold</a>  <span class="coordinates">-23º 32’ 32.45” -46º 38’ 6.30”</span> <span class="description">é um estúdio de design.</span> <span class="address">Avenida Prestes Maia, 241, República.</span></span>
-    <span class="disabled"><a href="#Balsa" class="company">Balsa</a> <span class="coordinates">-23º 32’ 34.53” -46º 38’ 12.04”</span> <span class="description">não é um bar.</span> <span class="address">Rua Capitão Salomão, 26, República.</span></span>
-    <span><a href="/casa-do-povo" class="company" data-photo="casa-do-povo.jpg">Casa do Povo</a> <span href="" class="coordinates">-23º 31’ 45.33” -46º 38’ 11.95”</span> <span class="description">é um centro cultural.</span> <span class="address">Rua Três Rios, 252, Bom Retiro.</span></span>
-    <span class="disabled"><a href="#Eduqativo" class="company">Eduqativo</a> <span class="coordinates">-23º 32’ 34.53” -46º 38’ 12.04”</span> <span class="description"> é um espaço de inovação em arte e educação.</span> <span class="address">Rua Capitão Salomão, 26, República.</span></span>
-    <span class="disabled"><a href="#Esparrama" class="company">Esparrama</a> <span class="coordinates">-23º 32’ 55.87” -46º 37’ 55.65”</span> <span class="description">é um grupo de teatro.</span> <span class="address">Minhocão, na altura da rua Amaral Gurgel.</span></span>
-    <span class="disabled"><a href="#Fluxo" class="company">Fluxo</a> <span class="cordnates">-23º 32’ 34.53” -46º 38’ 12.04”</span> <span class="description">é um estúdio de jornalismo.</span> <span class="address">Rua Capitão Salomão, 26, República.</span></span>
-    <span class="disabled"><a href="#Garagem" class="company">Garagem</a> <span class="coordinates">-23º 33’ 3.78” -46º 38’ 31.36”</span><span class="description"> é um laboratório de fabricação.</span> <span class="address">Praça General Craveiro Lopes, 19, República.</span></span>
-    <span class="disabled"><a href="#Lamina" class="company">Lâmina</a> <span class="coordinates">-23º 32’ 39.13” -46º 38’ 13.00”</span> <span class="description">é um estúdio-apartamento-galeria.</span> <span class="address">Avenida São João, 108, República.</span></span>
-    <span class="disabled"><a href="#Mandibula" class="company">Mandíbula</a> <span class="coordinates">-21 58’ 54.15” -46º 47’ 50.04”</span> <span class="description">é um bar disfarçado de loja de discos.</span> <span class="address">Praça Dom José Gaspar, 106, República.</span></span>
-    <span class="disabled"><a href="#Ouvidor" class="company">Ouvidor</a> <span class="coordinates">-23º 32’ 56.29” -46º 38’ 15.98”</span> <span class="description">é uma ocupação artística.</span> <span class="address">Rua do Ouvidor, 63, Sé.</span></span>
-    <span><a href="#Overground" class="company" data-photo="overground.jpg">Overground</a> <span class="coordinates">-23º 31’ 52.79” -46º 38’ 39.72”</span> <span class="description">é um estúdio e uma galeria de grafite.</span> <span class="address">Alameda Nothmann, 280, Campos Elíseos.</span></span>
-    <span class="disabled"><a href="#Paperbox" class="company">Paperbox</a> <span class="coordinates">-23º 33’ 4.72” -46º 37’ 50.52”</span> <span class="description">é um condomínio de ateliês.</span> <span class="address">Rua do Carmo, 56, Sé.</span></span>
-    <span class="disabled"><a href="#Pessoal-do-Faroeste" class="company">Pessoal do Faroeste</a> <span class="coordinates">-23º 32’ 8.36” -46º 38’ 19.58”</span> <span class="description">é uma companhia de teatro na Boca do Lixo.</span> <span class="address">Rua do Triunfo, 301, Luz.</span></span>
-    <span><a href="#Phosporus" class="company" data-photo="phosphorus.jpg">Phosphorus</a> <span class="coordinates">-23º 32’ 50.43” -46º 38’ 56.36”</span> <span class="description">é um espaço de exposição e residência artística.</span> <span class="address">Rua Roberto Simonsen, 108, Sé.</span></span>
-    <span class="disabled"><a href="#Pivo" class="company">Pivô</a> <span class="coordinates">-23º 32’ 45.86” -46º 38’ 40.89”</span> <span class="description">é uma galeria de arte no Copan.</span> <span class="address">Avenida Ipiranga, 200, República.</span></span>
-    <span class="disabled"><a href="#Publica" class="company">Pública</a> <span class="coordinates">-23º 31’ 58.74” -46º 39’ 5.15”</span> <span class="description">é uma redação de jornalismo investigativo.</span> <span class="address">Rua Vitorino Carmilo, 453, Santa Cecília.</span></span>
-    <span class="disabled"><a href="#Pum" class="company">Pum</a> <span class="coordinates">-23º 33’ 21.69” -46º 38’ 3.37”</span> <span class="description">é um estúdio em casa.</span> <span class="address">Rua da Glória, 320, Liberdade.</span></span> -->
   </div>
 </div>
