update hhead metatags

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: CENTRO
+description: CENTRO é um registro da ocupação criativa do centro de São Paulo.
 ---
 
 <div id="home" class="row">
