--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
     {% sorted_for post in site.posts sort_by:title %}
       <span class="{{ post.enabled }}">
         {% if post.enabled == "enabled" %}
-          <a href="{{ post.url | prepend: site.baseurl }}" class="company"
+          <a href="{{ post.url | remove_first:'/' }}" class="company"
           {% if post.photo != "" %} data-photo="{{post.photo}}" {% endif%}
           >{{ post.title }}</a>
         {% else %}
