add images structure

--- a/app/sobre.html
+++ b/app/sobre.html
@@ -3,28 +3,97 @@ layout: about
 title: CENTRO
 description: CENTRO é um registro da ocupação criativa do centro de São Paulo.
 ---
+<div id="about">
+  <div class="container">
+    <div class="row margin-bottom">
+      <div class="col-md-10 col-md-offset-1">
+          <p>Durante décadas, o centro de São Paulo se esvaziou, com galerias, restaurantes, estúdios, bares e redações trocando a região por outros cantos da cidade. Mas essa situação começou a mudar nos últimos anos, quando uma série de projetos criativos voltaram a ocupar os bairros entre Sé e Luz, República e Liberdade. Construído ao longo de seis meses, este projeto funciona como registro desse movimento, dos criadores dessas iniciativas, dos lugares que inventaram e dos futuros que desenham para a região.</p>
+      </div>
+    </div>
+  </div>
 
-<div class="container">
-  <div id="about" class="row">
-    <div class="col-md-11">
-      <p>Durante décadas, o centro de São Paulo se esvaziou, com galerias, restaurantes, estúdios, bares e redações trocando a região por outros cantos da cidade. Mas essa situação começou a mudar nos últimos anos, quando uma série de projetos criativos voltaram a ocupar os bairros entre Sé e Luz, República e Liberdade. Construído ao longo de seis meses, este projeto funciona como registro desse movimento, dos criadores dessas iniciativas, dos lugares que inventaram e dos futuros que desenham para a região.</p>
+  <div class="centro-container">
+    <div class="fixie-text-container">
+      <div class="row margin-bottom">
+        <div class="col-md-6 pull-right fixie-text">
+          <dl class="authors">
+            <dt>Edição</dt>
+            <dd>Luiz Romero (texto), <br> Felipe Rocha e Murilo Fonseca (arte)</dd>
 
-      <dl class="authors">
-        <dt>Edição</dt>
-        <dd>Luiz Romero (texto), <br> Felipe Rocha e Murilo Fonseca (arte)</dd>
-        <dt>Fotos</dt>
-        <dd>Leonardo Sang</dd>
-        <dt>Textos</dt>
-        <dd>Luiz Romero, Alexandre Aragão, <br> Luisa Cella e Nathan Fernandes</dd>
-        <dt>Design</dt>
-        <dd>Felipe Rocha e Murilo Fonseca</dd>
-        <dt></dt>
-        <dd>Obrigado a Lucas Andrade, <br> Livia Ascava, Victor de Bone, <br> Nicolas Henriques, Denise Saito <br> e Carolina Wan</dd>
-      </dl>
+            <dt>Fotos</dt>
+            <dd>Leonardo Sang</dd>
+
+            <dt>Textos</dt>
+            <dd>Luiz Romero, Alexandre Aragão, <br> Luisa Cella e Nathan Fernandes</dd>
+
+            <dt>Design</dt>
+            <dd>Felipe Rocha e Murilo Fonseca</dd>
+
+            <dt></dt>
+            <dd>Obrigado a Lucas Andrade, <br> Livia Ascava, Victor de Bone, <br> Nicolas Henriques, Denise Saito <br> e Carolina Wan</dd>
+          </dl>
+        </div>
+        <div class="col-md-6 show-smooth">
+          <img src="http://placehold.it/682x512" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-5 col-md-offset-4 show-smooth">
+          <img src="http://placehold.it/521x694" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-8 pull-right show-smooth">
+          <img src="http://placehold.it/904x678" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-6 col-md-offset-2 show-smooth">
+          <img src="http://placehold.it/681x512" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-4 show-smooth">
+          <img src="http://placehold.it/428x568" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-8 col-md-offset-2 show-smooth">
+          <img src="http://placehold.it/904x678" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-6 pull-right show-smooth">
+          <img src="http://placehold.it/665x499" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-8 pull-right show-smooth">
+          <img src="http://placehold.it/904x678" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-6 show-smooth">
+          <img src="http://placehold.it/666x500" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-8 col-md-offset-2 show-smooth">
+          <img src="http://placehold.it/682x875" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-6 pull-right show-smooth">
+          <img src="http://placehold.it/666x500" class="" alt="">
+        </div>
+      </div>
+      <div class="row margin-bottom">
+        <div class="col-md-8 pull-right show-smooth">
+          <img src="http://placehold.it/907x681" class="" alt="">
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="map-container">
-
-</div>
+<!-- <div class="map-container"></div> -->
