--- a/app/sobre.html
+++ b/app/sobre.html
@@ -3,97 +3,96 @@ layout: about
 title: CENTRO
 description: CENTRO é um registro da ocupação criativa do centro de São Paulo.
 ---
-<div id="about">
-  <div class="container">
+<div id="about" class="fixie-text-container">
+  <div class="container fixie-text">
     <div class="row margin-bottom">
       <div class="col-md-10 col-md-offset-1">
           <p>Durante décadas, o centro de São Paulo se esvaziou, com galerias, restaurantes, estúdios, bares e redações trocando a região por outros cantos da cidade. Mas essa situação começou a mudar nos últimos anos, quando uma série de projetos criativos voltaram a ocupar os bairros entre Sé e Luz, República e Liberdade. Construído ao longo de seis meses, este projeto funciona como registro desse movimento, dos criadores dessas iniciativas, dos lugares que inventaram e dos futuros que desenham para a região.</p>
       </div>
     </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-1">
+        <dl class="authors">
+          <dt>Edição</dt>
+          <dd>Luiz Romero (texto), <br> Felipe Rocha e Murilo Fonseca (arte)</dd>
+
+          <dt>Fotos</dt>
+          <dd>Leonardo Sang</dd>
+
+          <dt>Textos</dt>
+          <dd>Luiz Romero, Alexandre Aragão, <br> Luisa Cella e Nathan Fernandes</dd>
+
+          <dt>Design</dt>
+          <dd>Felipe Rocha e Murilo Fonseca</dd>
+
+          <dt></dt>
+          <dd>Obrigado a Lucas Andrade, <br> Livia Ascava, Victor de Bone, <br> Nicolas Henriques, Denise Saito <br> e Carolina Wan</dd>
+        </dl>
+      </div>
+    </div>
   </div>
 
   <div class="centro-container">
-    <div class="fixie-text-container">
-      <div class="row margin-bottom">
-        <div class="col-md-6 pull-right fixie-text">
-          <dl class="authors">
-            <dt>Edição</dt>
-            <dd>Luiz Romero (texto), <br> Felipe Rocha e Murilo Fonseca (arte)</dd>
-
-            <dt>Fotos</dt>
-            <dd>Leonardo Sang</dd>
-
-            <dt>Textos</dt>
-            <dd>Luiz Romero, Alexandre Aragão, <br> Luisa Cella e Nathan Fernandes</dd>
-
-            <dt>Design</dt>
-            <dd>Felipe Rocha e Murilo Fonseca</dd>
-
-            <dt></dt>
-            <dd>Obrigado a Lucas Andrade, <br> Livia Ascava, Victor de Bone, <br> Nicolas Henriques, Denise Saito <br> e Carolina Wan</dd>
-          </dl>
-        </div>
-        <div class="col-md-6 show-smooth">
-          <img src="img/content/about/01.jpg" class="" alt="">
-        </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/about/01.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-5 col-md-offset-4 show-smooth">
-          <img src="img/content/about/02.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-5 col-md-offset-4 show-smooth">
+        <img src="img/content/about/02.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-8 pull-right show-smooth">
-          <img src="img/content/about/03.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/about/03.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-6 col-md-offset-2 show-smooth">
-          <img src="img/content/about/04.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/about/04.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-4 show-smooth">
-          <img src="img/content/about/05.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth">
+        <img src="img/content/about/05.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-8 col-md-offset-2 show-smooth">
-          <img src="img/content/about/06.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 col-md-offset-2 show-smooth">
+        <img src="img/content/about/06.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-6 pull-right show-smooth">
-          <img src="img/content/about/07.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/about/07.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-8 pull-right show-smooth">
-          <img src="img/content/about/08.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/about/08.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-6 show-smooth">
-          <img src="img/content/about/09.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/about/09.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-8 col-md-offset-2 show-smooth">
-          <img src="img/content/about/10.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 col-md-offset-2 show-smooth">
+        <img src="img/content/about/10.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-6 pull-right show-smooth">
-          <img src="img/content/about/11.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/about/11.jpg" class="" alt="">
       </div>
-      <div class="row margin-bottom">
-        <div class="col-md-8 pull-right show-smooth">
-          <img src="img/content/about/12.jpg" class="" alt="">
-        </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/about/12.jpg" class="" alt="">
       </div>
     </div>
   </div>
 </div>
-
-<!-- <div class="map-container"></div> -->
+<div class="map-container"></div>
