Added link about in homepage and updated border for internal pages.

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
 
 <div id="home" class="row">
   <div class="col-md-12">
-    CENTRO é um registro da ocupação criativa do centro de São Paulo. <a href="" class="read-more">leia mais</a>
+    CENTRO é um registro da ocupação criativa do centro de São Paulo. <a href="./sobre.html" class="read-more">leia mais</a>
 
     {% sorted_for post in site.posts sort_by:weight %}
       <span class="{{ post.enabled }}">
