fix header, fix about text

--- a/app/sobre.html
+++ b/app/sobre.html
@@ -36,6 +36,9 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
   </div>
 
   <div class="centro-container">
+    <div class="row margin-bottom desktop-only">
+      <div class="container-gap"></div>
+    </div>
     <div class="row margin-bottom">
       <div class="col-md-6 show-smooth">
         <img src="img/content/about/01.jpg" class="" alt="">
