fix content, fix about, fix share

--- a/app/sobre.html
+++ b/app/sobre.html
@@ -61,17 +61,15 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
     </div>
     <div class="row margin-bottom">
       <div class="col-md-6 show-smooth">
-        <img src="img/content/about/09.jpg" class="" alt="">
-      </div>
-    </div>
-    <div class="row margin-bottom">
-      <div class="col-md-8 pull-right show-smooth">
         <img src="img/content/about/12.jpg" class="" alt="">
       </div>
     </div>
+    <div class="row margin-bottom desktop-only">
+      <div class="container-gap" style="padding-top: 50px;"></div>
+    </div>
   </div>
 </div>
-<div class="map-container">
+<div class="map-container desktop-only">
   <div class="wrapper">
     <img src="img/content/about/map.jpg" class="" alt="">
 
