add links to about

--- a/app/sobre.html
+++ b/app/sobre.html
@@ -7,26 +7,26 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
   <div class="container fixie-text">
     <div class="row margin-bottom">
       <div class="col-md-10 col-md-offset-1">
-          <p>Durante décadas, o centro de São Paulo se esvaziou, com galerias, restaurantes, estúdios, bares e redações trocando a região por outros cantos da cidade. Mas essa situação começou a mudar nos últimos anos, quando uma série de projetos criativos voltaram a ocupar os bairros entre Sé e Luz, República e Liberdade. Construído ao longo de seis meses, este projeto funciona como registro desse movimento, dos criadores dessas iniciativas, dos lugares que inventaram e dos futuros que desenham para a região.</p>
+          <p>O centro de São Paulo se esvaziou nas últimas décadas, com galerias, restaurantes, estúdios, bares e redações trocando a região por outros lados da cidade. Mas isso começou a mudar em tempos recentes, quando uma série de projetos criativos voltaram a ocupar os bairros entre Sé e Luz, República e Liberdade. Este projeto é um registro dos criadores desse movimento, dos lugares que inventaram e dos futuros que desenham para a região.</p>
       </div>
     </div>
     <div class="row margin-bottom">
       <div class="col-md-4 col-md-offset-1">
         <dl class="authors">
           <dt>Edição</dt>
-          <dd>Luiz Romero (texto), <br> Felipe Rocha e Murilo Fonseca (arte)</dd>
+          <dd><strong><a href="http://luizromero.info/" target="_blank">Luiz Romero</a></strong> (texto), <br> <strong><a href="http://flpr.co/" target="_blank">Felipe Rocha</a></strong> e <strong><a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a></strong> (arte)</dd>
 
           <dt>Fotos</dt>
-          <dd>Leonardo Sang</dd>
+          <dd><strong><a href="http://cargocollective.com/leosang" target="_blank">Leonardo Sang</a></strong></dd>
         </dl>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <dl class="authors">
           <dt>Textos</dt>
-          <dd>Luiz Romero, Alexandre Aragão, Luisa Cella e Nathan Fernandes</dd>
+          <dd><strong><a href="http://luizromero.info/" target="_blank">Luiz Romero</a></strong>, Alexandre Aragão, Luisa Cella e Nathan Fernandes</dd>
 
           <dt>Design</dt>
-          <dd>Felipe Rocha<br> e Murilo Fonseca</dd>
+          <dd><strong><a href="http://flpr.co/" target="_blank">Felipe Rocha</a></strong><br> e <strong><a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a></strong></dd>
 
           <dt></dt>
           <dd>Obrigado a Lucas Andrade, Livia Ascava, Victor de Bone, Nicolas Henriques, Denise Saito<br> e Carolina Wan</dd>
@@ -82,7 +82,7 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
       </div>
       {% endif %}
     {% endsorted_for %}
-  
+
   </div>
 
 </div>
