--- a/app/sobre.html
+++ b/app/sobre.html
@@ -14,19 +14,19 @@ description: CENTRO é um registro da ocupação criativa do centro de São Paul
       <div class="col-md-4 col-md-offset-1">
         <dl class="authors">
           <dt>Edição</dt>
-          <dd><strong><a href="http://luizromero.info/" target="_blank">Luiz Romero</a></strong> (texto), <br> <strong><a href="http://flpr.co/" target="_blank">Felipe Rocha</a></strong> e <strong><a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a></strong> (arte)</dd>
+          <dd><a href="http://luizromero.info/" target="_blank">Luiz Romero</a> (texto), <br> <a href="http://flpr.co/" target="_blank">Felipe Rocha</a> e <a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a> (arte)</dd>
 
           <dt>Fotos</dt>
-          <dd><strong><a href="http://cargocollective.com/leosang" target="_blank">Leonardo Sang</a></strong></dd>
+          <dd><a href="http://cargocollective.com/leosang" target="_blank">Leonardo Sang</a></dd>
         </dl>
       </div>
       <div class="col-md-4 col-md-offset-1">
         <dl class="authors">
           <dt>Textos</dt>
-          <dd><strong><a href="http://luizromero.info/" target="_blank">Luiz Romero</a></strong>, Alexandre Aragão, Luisa Cella e Nathan Fernandes</dd>
+          <dd><a href="http://luizromero.info/" target="_blank">Luiz Romero</a>, Alexandre Aragão, Luisa Cella e Nathan Fernandes</dd>
 
           <dt>Design</dt>
-          <dd><strong><a href="http://flpr.co/" target="_blank">Felipe Rocha</a></strong><br> e <strong><a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a></strong></dd>
+          <dd><a href="http://flpr.co/" target="_blank">Felipe Rocha</a><br> e <a href="http://estudioarnold.cc/arnold-studio/" target="_blank">Murilo Fonseca</a></dd>
 
           <dt></dt>
           <dd>Obrigado a Lucas Andrade, Livia Ascava, Victor de Bone, Nicolas Henriques, Denise Saito<br> e Carolina Wan</dd>
